Finished hw 4, add apikey to run project

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name="com.example.android.newsapp.dispatcher.NewsJob"
+            android:exported="false">
+            <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+        </service>
     </application>
 
 </manifest>
